Add development status message to landing page

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,7 @@
             <section>
                 <h2>Welcome to SmartCalendar.Life</h2>
                 <p>This is a placeholder website ready for Firebase deployment.</p>
+                <p><em>🚀 Currently under active development - AI-powered academic calendar coming soon!</em></p>
                 
                 <div class="feature">
                     <h3>Easy Scheduling</h3>
